fixed z-index on overlap issue

--- a/components/layout/navigation/navigation.module.scss
+++ b/components/layout/navigation/navigation.module.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 4;
+    z-index: 20;
     opacity: 1;
     display: block;
     background-color: var(--accent-color);
